Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - main
 
 variables:
-  dockerRegistryServiceConnection: '<SERVICE_CONNECTION_NAME>'
+  dockerRegistryServiceConnection: 'http://azurecontainerregistrydocker.azurecr.io'
   imageRepository: '<IMAGE_NAME>'
   dockerfilePath: '$(Build.SourcesDirectory)/app/Dockerfile'
   tag: '$(Build.BuildId)'
@@ -14,7 +14,7 @@ stages:
   - job: Build
     displayName: Build job
     pool:
-      name: '<YOUR_AGENT_POOL_NAME>'
+      name: 'Default'
     steps:
     - task: DockerInstaller@0
       inputs:
